--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJ
 
 const supabase = supabase.createClient(SB_URL, SB_KEY);
 
+const { useState, useEffect } = React;
+
 /* ===================== DATA ===================== */
 
 const TEAMS = {
@@ -40,8 +42,6 @@ const TEAMS = {
   mclaren:"#FF8000", aston:"#229971", alpine:"#0093CC",
   williams:"#64C4FF", haas:"#B6BABD"
 };
-
-const { useState, useEffect } = React;
 
 /* ===================== APP ===================== */
 
@@ -57,65 +57,97 @@ function App() {
   const [roomCode,setRoomCode]=useState("");
   const [predText,setPredText]=useState("");
 
-  /* ---------- LOAD F1 CALENDAR ---------- */
+  /* ---------- LOAD F1 CALENDAR (CORS SAFE) ---------- */
   useEffect(()=>{
-    fetch("https://ergast.com/api/f1/current.json")
+    fetch("https://raw.githubusercontent.com/ergast/f1db/master/f1db/races.json")
       .then(r=>r.json())
-      .then(d=>{
-        const rs=d.MRData.RaceTable.Races.map(r=>({
-          key:r.round,
-          name:r.raceName,
-          date:new Date(`${r.date}T${r.time||"00:00:00Z"}`)
-        }));
+      .then(data=>{
+        const year=new Date().getFullYear();
+        const rs=data
+          .filter(r=>r.year===year)
+          .map(r=>({
+            key:r.round,
+            name:r.name,
+            date:new Date(r.date+"T00:00:00Z")
+          }));
         setRaces(rs);
-        setActiveRace(rs.find(r=>r.date>new Date())||rs[0]);
+        const upcoming=rs.find(r=>r.date>new Date());
+        setActiveRace(upcoming||rs[0]||null);
+      })
+      .catch(()=>{
+        setRaces([]);
+        setActiveRace(null);
       });
   },[]);
 
   /* ---------- ROOM ---------- */
   async function createRoom(){
     const code=Math.random().toString(36).substring(2,8).toUpperCase();
-    const {data}=await supabase.from("rooms").insert({code,name:"F1 Room"}).select().single();
-    setRoom(data); loadParticipants(data.id); setView("room");
+    const {data,error}=await supabase
+      .from("rooms")
+      .insert({code,name:"F1 Room"})
+      .select()
+      .single();
+    if(error){alert(error.message);return;}
+    setRoom(data);
+    loadParticipants(data.id);
+    setView("room");
   }
+
   async function joinRoom(){
-    const {data}=await supabase.from("rooms").select().eq("code",roomCode).single();
-    if(!data) return alert("Room not found");
-    setRoom(data); loadParticipants(data.id); setView("room");
+    const {data,error}=await supabase
+      .from("rooms")
+      .select()
+      .eq("code",roomCode.toUpperCase())
+      .single();
+    if(error||!data){alert("Room not found");return;}
+    setRoom(data);
+    loadParticipants(data.id);
+    setView("room");
   }
+
   async function loadParticipants(id){
-    const {data}=await supabase.from("participants").select().eq("room_id",id);
+    const {data}=await supabase
+      .from("participants")
+      .select()
+      .eq("room_id",id);
     setParticipants(data||[]);
   }
 
   /* ---------- PARTICIPANTS ---------- */
   async function addParticipant(){
-    if(!name) return;
-    await supabase.from("participants").insert({room_id:room.id,name,team_color:team});
-    setName(""); loadParticipants(room.id);
+    if(!name||!room) return;
+    await supabase.from("participants").insert({
+      room_id:room.id,
+      name,
+      team_color:team
+    });
+    setName("");
+    loadParticipants(room.id);
   }
 
   /* ---------- PREDICTIONS ---------- */
   useEffect(()=>{
-    if(room&&activeRace){
-      supabase.from("predictions")
-        .select("*,participants(name,team_color)")
-        .eq("race_key",activeRace.key)
-        .eq("room_id",room.id)
-        .then(({data})=>setPredictions(data||[]));
-    }
+    if(!room||!activeRace) return;
+    supabase
+      .from("predictions")
+      .select("*,participants(name,team_color)")
+      .eq("room_id",room.id)
+      .eq("race_key",activeRace.key)
+      .then(({data})=>setPredictions(data||[]));
   },[room,activeRace]);
 
   async function addPrediction(){
-    if(!predText) return;
+    if(!predText||!room||!activeRace) return;
     await supabase.from("predictions").insert({
       room_id:room.id,
       race_key:activeRace.key,
       text:predText
     });
     setPredText("");
-    const {data}=await supabase.from("predictions")
-      .select("*")
+    const {data}=await supabase
+      .from("predictions")
+      .select("*,participants(name,team_color)")
       .eq("room_id",room.id)
       .eq("race_key",activeRace.key);
     setPredictions(data||[]);
@@ -126,16 +158,23 @@ function App() {
   if(view==="landing") return (
     <div className="min-h-screen flex flex-col items-center justify-center gap-6">
       <h1 className="text-4xl font-black">F1 PADDOCK</h1>
-      {activeRace&&<Countdown target={activeRace.date} />}
+
+      {activeRace && <Countdown target={activeRace.date} />}
+
       <div className="glass p-6 w-80 rounded-xl">
-        <input className="w-full p-3 bg-black border mb-2"
+        <input
+          className="w-full p-3 bg-black border mb-2"
           placeholder="ROOM CODE"
           value={roomCode}
           onChange={e=>setRoomCode(e.target.value)}
         />
         <div className="flex gap-2">
-          <button onClick={createRoom} className="grad flex-1 p-3 font-bold">Create</button>
-          <button onClick={joinRoom} className="bg-white text-black flex-1 p-3 font-bold">Join</button>
+          <button onClick={createRoom} className="grad flex-1 p-3 font-bold">
+            Create
+          </button>
+          <button onClick={joinRoom} className="bg-white text-black flex-1 p-3 font-bold">
+            Join
+          </button>
         </div>
       </div>
     </div>
@@ -148,33 +187,46 @@ function App() {
           <p className="text-xs text-gray-400">Room</p>
           <div className="flex gap-2 items-center">
             <p className="text-red-500 font-mono">{room.code}</p>
-            <button onClick={()=>navigator.clipboard.writeText(room.code)}
-              className="border px-2 text-xs">Copy</button>
+            <button
+              onClick={()=>navigator.clipboard.writeText(room.code)}
+              className="border px-2 text-xs"
+            >Copy</button>
           </div>
         </div>
-        <button onClick={()=>setView("landing")} className="text-xs text-gray-400">Exit</button>
+        <button onClick={()=>setView("landing")} className="text-xs text-gray-400">
+          Exit
+        </button>
       </div>
 
-      <select className="w-full p-3 bg-black border"
-        value={activeRace?.key}
-        onChange={e=>setActiveRace(races.find(r=>r.key==e.target.value))}
-      >
-        {races.map(r=><option key={r.key} value={r.key}>{r.name}</option>)}
-      </select>
+      {races.length>0 && (
+        <select
+          className="w-full p-3 bg-black border"
+          value={activeRace?.key||""}
+          onChange={e=>setActiveRace(races.find(r=>r.key==e.target.value))}
+        >
+          {races.map(r=>(
+            <option key={r.key} value={r.key}>{r.name}</option>
+          ))}
+        </select>
+      )}
 
-      {activeRace&&<Countdown target={activeRace.date} />}
+      {activeRace && <Countdown target={activeRace.date} />}
 
       <div className="glass p-4 rounded-xl">
-        <input className="w-full p-2 bg-black border mb-2"
+        <input
+          className="w-full p-2 bg-black border mb-2"
           placeholder="Your name"
           value={name}
           onChange={e=>setName(e.target.value)}
         />
-        <select className="w-full p-2 bg-black border mb-2"
+        <select
+          className="w-full p-2 bg-black border mb-2"
           value={team}
           onChange={e=>setTeam(e.target.value)}
         >
-          {Object.keys(TEAMS).map(t=><option key={t}>{t}</option>)}
+          {Object.keys(TEAMS).map(t=>(
+            <option key={t}>{t}</option>
+          ))}
         </select>
         <button onClick={addParticipant} className="grad w-full p-2 font-bold">
           Join as Strategist
@@ -182,8 +234,9 @@ function App() {
       </div>
 
       <div className="glass p-4 rounded-xl">
-        <input className="w-full p-2 bg-black border mb-2"
-          placeholder={`Prediction for ${activeRace.name}`}
+        <input
+          className="w-full p-2 bg-black border mb-2"
+          placeholder={`Prediction for ${activeRace?.name || "Selected Race"}`}
           value={predText}
           onChange={e=>setPredText(e.target.value)}
         />
@@ -194,8 +247,11 @@ function App() {
 
       <div className="space-y-3">
         {predictions.map(p=>(
-          <div key={p.id} className="glass p-3 rounded-xl border-l-4"
-            style={{borderColor:TEAMS[p.participants?.team_color]}}>
+          <div
+            key={p.id}
+            className="glass p-3 rounded-xl border-l-4"
+            style={{borderColor:TEAMS[p.participants?.team_color]}}
+          >
             <p className="font-bold">{p.participants?.name}</p>
             <p className="text-sm text-gray-400">{p.text}</p>
           </div>
@@ -212,7 +268,11 @@ function Countdown({target}){
     const i=setInterval(()=>{
       const d=target-new Date();
       if(d<=0){setT("LIVE");clearInterval(i);}
-      else setT(`${Math.floor(d/86400000)}d ${Math.floor(d/3600000)%24}h ${Math.floor(d/60000)%60}m`);
+      else setT(
+        `${Math.floor(d/86400000)}d `+
+        `${Math.floor(d/3600000)%24}h `+
+        `${Math.floor(d/60000)%60}m`
+      );
     },1000);
     return()=>clearInterval(i);
   },[target]);
